# Trabalho-Grafos

./: Aresta.cpp  Aresta.h  CMakeLists.txt  Cadeia.cpp  Cadeia.h  CadeiaTeste.cpp  CadeiaTeste.h  Grafo.cpp  Grafo.h  README.md  Solucao.cpp  Solucao.h  SolucaoTeste.cpp  SolucaoTeste.h  Vertice.cpp  Vertice.h  main.cpp  resultadosInstancias  resultadosInstancias.txt  scriptRodaAlgoritmo.sh  scriptRodaAlgoritmoResto.sh  teste.txt  teste1.txt  teste2.txt
.gitignore/: .gitignore
instancias/: 01.txt  02.txt  03.txt  04.txt  07.txt  12.txt  13.txt  14.txt  15.txt  16.txt  19.txt  28.txt  29.txt  30.txt  i-10-kroB100_Q9-L9044.tsp.txt  i-5-eil51_Q12-L153.tsp.txt  i-5-eil51_Q14-L200.tsp.txt  i-5-eil76_Q14-L227.tsp.txt  instanciaigual-200-4-a_Q14-L1294.tsp.txt  instanciaigual-200-4-x1_Q7-L1966.tsp.txt
